Correct top alignment of Pros & Cons in iPad portrait mode #63

--- a/app/components/proscons/proscons.pcss
+++ b/app/components/proscons/proscons.pcss
@@ -7,7 +7,7 @@
   margin-top: 2rem;
 }
 
-@media (--ml-vp) {
+@media (--m-vp) {
   .c-proscons {
     margin-top: 0;
   }
